Fix menu alignment for Safari

--- a/app/styles/global.css
+++ b/app/styles/global.css
@@ -425,6 +425,7 @@ hr {
 .menu__icons-container > a {
   display: flex;
   justify-content: flex-end;
+  height: 1.25rem;
 }
 
 .menu__icon {
